feat: Implement WebAuthn (Touch ID) authentication and admin dashboard
FEATURE SUMMARY
===============
Implemented device-based authentication using WebAuthn (Touch ID/Face ID/security keys)
and a comprehensive admin dashboard for managing mailing lists and registered devices.
Provides secure, phishing-resistant authentication without passwords.

WEBAUTHN AUTHENTICATION
=======================
Device Registration:
- Admin users can register devices using Touch ID, Face ID, or security keys
- Stores public keys in D1 database (private keys never leave device)
- Device management UI: name devices, view last used, revoke access

Login Flow:
- Email + WebAuthn challenge/response
- Touch ID prompt on MacBook Pro (or Face ID on mobile)
- Generates JWT token with user role
- No password required after device registration

Security:
- Phishing-resistant (cryptographic challenge/response)
- Private keys stored in device Secure Enclave/TPM
- Can't be stolen remotely
- Admin-only device registration (requires existing admin account)

DATABASE CHANGES
================
Created migration (0006_add_webauthn_credentials.sql):
- webauthn_credentials table (id, user_id, credential_id, public_key, counter,
  device_name, transports, created_at, last_used_at)
- Indexes on user_id and credential_id for fast lookups
- Foreign key to users table with CASCADE delete

BACKEND CHANGES (Workers API)
==============================
New route: /webauthn

Device Registration:
- POST /webauthn/register-challenge - Generate registration challenge
- POST /webauthn/register-verify - Verify and save credential
- Requires: Admin user authenticated (requireAdmin middleware)

Authentication:
- POST /webauthn/login-challenge - Generate login challenge (public)
- POST /webauthn/login-verify - Verify and issue JWT (public)
- Stores challenges in KV with 5-minute expiration

Device Management:
- GET /webauthn/devices - List user's registered devices
- DELETE /webauthn/devices/:id - Revoke device
- Requires: 

--- a/cloud-frontend/package.json
+++ b/cloud-frontend/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && wrangler pages deploy dist --project-name=npe-cloud"
   },
   "dependencies": {
+    "@simplewebauthn/browser": "^13.2.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
