fix: Archive password manager autofill + preserve Sprint backup files
Changes:
- Add hidden username field to trigger password manager save/autofill
- Change password field name to standard 'password' (was 'archive-password')
- Preserve Sprint 2/3 and Sprint 4 backup files for reference
- Include internet discourse migration (Sprint 3 work)
- Add PhilosophyTooltip component and validation utilities
- Update workbench panels with latest UX improvements

This commit captures all uncommitted work before branch cleanup.

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,9 @@ temp/
 dev_TRM/
 .codebase_tracking/
 *.md.swp
+
+# Legal Documents (Provisional - Not Yet Reviewed)
+docs/TERMS_OF_SERVICE.md
+docs/PRIVACY_POLICY.md
+docs/GDPR_COMPLIANCE_REVIEW.md
+docs/LEGAL_DOCUMENTS_README.md
