--- a/cloud-workbench/package.json
+++ b/cloud-workbench/package.json
@@ -43,6 +43,7 @@
     "@vitejs/plugin-react-swc": "^4.2.2",
     "@vitest/ui": "^4.0.9",
     "autoprefixer": "^10.4.22",
+    "daisyui": "^5.5.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
