--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
+# Note: Removed 'lib/' to allow cloud-workbench/src/lib/ TypeScript files
 parts/
 sdist/
 var/
