chore: Add strategic planning docs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ docs/LEGAL_DOCUMENTS_README.md
 
 # Strategic Planning (Private Deliberations)
 narrative-studio/docs/DISTRIBUTION_STRATEGY_ANALYSIS.md
+narrative-studio/docs/API_SERVICE_STRATEGY.md
