--- a/workers/npe-api/package.json
+++ b/workers/npe-api/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@simplewebauthn/server": "^13.2.2",
     "@simplewebauthn/types": "^12.0.0",
+    "fastest-levenshtein": "^1.0.16",
     "hono": "^4.10.6",
     "jose": "^6.1.0",
     "mathjs": "^15.0.0",
-    "uuid": "^13.0.0"
+    "natural": "^8.1.0",
+    "sentence-splitter": "^5.0.0",
+    "uuid": "^13.0.0",
+    "wink-tokenizer": "^5.3.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251113.0",
